speedtest-fileserver (0.1) stretch; urgency=low

  * initial release

 -- Miquel van Smoorenburg (XS4ALL) <mikevs@xs4all.net>  Fri, 15 Feb 2019 16:44:10 +0100
