@@ -10,6 +10,6 @@ clap = "2.32.0"
 http = "0.2"
 human-size = "0.4.0"
 hyper = "0.13"
-rand = "0.6.5"
-rand_xoshiro = "0.1.0"
+rand = "0.7.3"
+rand_core = "0.5"
 tokio = { version = "0.2", features = ["full"] }
