@@ -110,6 +110,11 @@
     <td class="mono">2018-23-01 13:37</td>
     <td class="mono" align="right">10G</td>
   </tr>
+  <tr>
+    <td><a href="10GiB.bin">20GiB.bin</a></td>
+    <td class="mono">2018-23-01 13:37</td>
+    <td class="mono" align="right">20G</td>
+  </tr>
 
   <tr><th colspan="3"><hr></th></tr>
 </table>
